# Chat-Bot-

./: README.md
OOPSPROJ/: CMakeLists.txt  CopyJIcase.cpp  IBAText.txt  TXT.json  main.cpp
OOPSPROJ-GIT/: main.cpp
OOPSPROJ-GIT/openai-cpp/: CMakeLists.txt
OOPSPROJ/openai-cpp/examples/: 00-showcase.cpp  02-completion.cpp  04-image.cpp
